quick fix to scroll down - no border on small mobile views

--- a/app/assets/stylesheets/static_pages.css
+++ b/app/assets/stylesheets/static_pages.css
@@ -1006,7 +1006,7 @@ CARD styles
   }
   .landingRowButton{
     font-size: 4rem;
-    line-height: 7rem;
+    line-height: 6.5rem;
   }
   #animatedtext {
     padding-top:1em;
@@ -1037,7 +1037,7 @@ CARD styles
     bottom: 5em;
   }
   .scroll-down {
-    background:none;
+     border: 0 solid transparent;
   }
   #headshot{
     border:none;
